squiggle.png: add image (241114)

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <span>y</span>
               <span>t</span>
               <span class="h">
-                <div class="squiggle"><img src="https://gsap.com/tf-assets/worm-e8f0c8f6.png" alt="squiggle"></div>
+                <div class="squiggle"><img src="./images/squiggle.png" alt="squiggle"></div>
                 <span>h</span>
               </span>
               <span class="i">i</span>
